# rawdatatocsv

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  main.py  process.toml  pyproject.toml
.devcontainer/: devcontainer.json
data/raw/: data.csv.sample  data.list.sample
sources/models/: process.py
sources/scripts/: format_json.py  json_to_csv.py
sources/utilities/: display.py  files.py  logs.py
tests/utilities/: display_test.py  logs_test.py
