[tool.poetry]
name = "rawdatatocsv"
version = "0.1.0"
description = "Script to format raw to csv"
authors = ["TheDarkNine <thedarknine@proton.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
arrow = "^1.3.0"
rich = "^13.9.4"
pytest = "^8.3.4"
black = "^24.10.0"
pylint = "^3.3.2"
toml = "^0.10.2"
pydantic = "^2.10.3"

[tool.pytest.ini_options]
testpaths = ["tests/utilities"]
python_files = "*_test.py"
addopts = "-v -ra -q"
#log_cli = true
minversion = "6.0"
# Specify a custom directory for pytest cache
cache_dir = "./.tmp/.pytest_cache"
# env_override_existing_values = 1
# env_files = [
#    '.env.test',
# ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
